--- a/index.html
+++ b/index.html
@@ -1,1 +1,134 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>New Age - Start Bootstrap Theme</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+
+  <!-- Plugin CSS -->
+  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
+
+  <!-- Custom styles for this template -->
+  <link href="css/new-age.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <!-- Navigation -->
+<!--
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+-->
+
+ 
+
+  <section class="download bg-primary text-center" id="download">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto">
+          <h2 class="section-heading font-weight-bold text-white mb-4">Download the social distancing app</h2>
+          <h4 class="text-white mb-4">Did you know 2 meters are about the length of a double bed? Or about the distance if you hold a broom with your arm extended? Learn about your contagious area to maintain a safe social distance</h4>
+     
+			<div class="row">
+			  <div class="col-6 mx-auto">
+				  <div class="badges mb-4">
+            		<a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt="Google Play"></a>
+				  </div>
+				<img src="img/qr-code.svg" class="shadow" alt="QR code Google Play" style="width:50%">
+			  </div>
+			  <div class="col-6 mx-auto">
+				  <div class="badges mb-4">
+            		<a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt="App Store"></a>
+				  </div>
+				<img src="img/qr-code.svg" class="shadow" alt="QR code App Store" style="width:50%">
+			  </div>
+ 
+</div>
+			
+			
+        </div>
+      </div>
+    </div>
+  </section>
+
+ 
+
+  <section class="contact" id="contact">
+    <div class="container">
+      <h2 class="mb-4">We
+        <i class="fas fa-heart"></i>
+        feedback!</h2>
+		<h4 class="mb-4">Is something not working? Do you have an idea to improve the app? We'd love to hear it</h4>
+      <a href="https://github.com/CoronApp-project/coronapp-project.github.io/issues/new/choose" target="_blank" class="btn btn-outline btn-xl js-scroll-trigger btn-danger">Submit feedback</a>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <p>&copy; Social distancing app 2020</p>
+<!--
+      <ul class="list-inline">
+        <li class="list-inline-item">
+          <a href="#">Privacy</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">Terms</a>
+        </li>
+        <li class="list-inline-item">
+          <a href="#">FAQ</a>
+        </li>
+      </ul>
+-->
+    </div>
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/new-age.min.js"></script>
+
+</body>
+
+</html>
