folder devices mockup added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
   <!-- Plugin CSS -->
-<!--  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">-->
+  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
   <!-- Custom styles for this template -->
   <link href="css/new-age.css" rel="stylesheet">
@@ -76,13 +76,13 @@
 			<div class="row">
 			  <div class="col-6 mx-auto">
 				  <div class="badges mb-4">
-            		<a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt="Google Play"></a>
+            		<a class="badge-link" href="#"><img class="img-fluid" src="img/google-play-badge.svg" alt="Google Play"></a>
 				  </div>
 				<img src="img/qr-code.svg" class="shadow" alt="QR code Google Play" style="width:50%">
 			  </div>
 			  <div class="col-6 mx-auto">
 				  <div class="badges mb-4">
-            		<a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt="App Store"></a>
+            		<a class="badge-link" href="#"><img class="img-fluid" src="img/app-store-badge.svg" alt="App Store"></a>
 				  </div>
 				<img src="img/qr-code.svg" class="shadow" alt="QR code App Store" style="width:50%">
 			  </div>
