--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 				  <div class="badges mb-4">
             		<a class="badge-link" href="#"><img class="img-fluid" src="img/google-play-badge.svg" alt="Google Play"></a>
 				  </div>
-				<img src="img/qr-code.svg" class="shadow" alt="QR code Google Play" style="width:50%">
+<!--				<img src="img/qr-code.svg" class="shadow" alt="QR code Google Play" style="width:50%">-->
 			  </div>
 			  <div class="col-6 mx-auto">
 				  <div class="badges mb-4">
             		<a class="badge-link" href="#"><img class="img-fluid" src="img/app-store-badge.svg" alt="App Store"></a>
 				  </div>
-				<img src="img/qr-code.svg" class="shadow" alt="QR code App Store" style="width:50%">
+<!--				<img src="img/qr-code.svg" class="shadow" alt="QR code App Store" style="width:50%">-->
 			  </div>
  
 </div>
