--- a/index.html
+++ b/index.html
@@ -66,28 +66,34 @@
 
  
 
-  <section class="download bg-primary text-center" id="download">
+  <section class="download bg-primary text-center mb-0 pb-0" id="download">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 mx-auto">
-          <h2 class="section-heading font-weight-bold text-white mb-4">Download the social distancing app</h2>
-          <h4 class="text-white mb-4">Did you know 2 meters are about the length of a double bed? Or about the distance if you hold a broom with your arm extended? Learn about your contagious area to maintain a safe social distance</h4>
+        <div class="col-md-6">
+          <h2 class="section-heading font-weight-bold text-white mb-4 mt-lg-5 text-left">Download the social distancing app</h2>
+          <h4 class="text-white text-left mb-lg-5">Did you know 2 meters are about the length of a double bed? Or about the distance if you hold a broom with your arm extended? Learn about your contagious area to maintain a safe social distance</h4>
      
 			<div class="row">
 			  <div class="col-6 mx-auto">
-				  <div class="badges mb-4">
+				  <div class="badges mb-4 mt-4">
             		<a class="badge-link" href="#"><img class="img-fluid" src="img/google-play-badge.svg" alt="Google Play"></a>
 				  </div>
 <!--				<img src="img/qr-code.svg" class="shadow" alt="QR code Google Play" style="width:50%">-->
 			  </div>
 			  <div class="col-6 mx-auto">
-				  <div class="badges mb-4">
+				  <div class="badges mb-4 mt-4">
             		<a class="badge-link" href="#"><img class="img-fluid" src="img/app-store-badge.svg" alt="App Store"></a>
 				  </div>
 <!--				<img src="img/qr-code.svg" class="shadow" alt="QR code App Store" style="width:50%">-->
 			  </div>
  
 </div>
+			
+			
+        </div>
+		  <div class="col-md-6">
+          
+ 			<img src="../Social distancing/Screenshots/Screen-04-web.jpg" class="img-fluid" />
 			
 			
         </div>
