alt added to img

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
 		  <div class="col-md-6">
           
- 			<img src="img/Screen-04-web.jpg" class="img-fluid" />
+ 			<img src="img/Screen-04-web.jpg" class="img-fluid" alt="Screenshot of AR app to keep social distance" />
 			
 			
         </div>
